Fixed IE and Edge spacing error
Changed
    justify-content: space-evenly;
to
    justify-content: space-around;

--- a/index.css
+++ b/index.css
@@ -78,8 +78,10 @@ footer {
 
 .project div {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-wrap: wrap;
+    flex: 1 1 auto;
+    overflow: hidden;
 }
 
 .project article {
